change name and add title

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<h1>Angular Animation Use Variables Demo</h1>
 <div class="square"
     [@position]="{value:position, params:{time:animationTime, left:leftPosition}}">
     <b>square</b>
